Fix body alignment by adding align-content property

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 }
 
 body {
+    align-content: center;
     min-height: 100vh;
     background-color: var(--body-bg-clr);
 }
